--- a/public/index.html
+++ b/public/index.html
@@ -217,6 +217,12 @@
             <p>Why? <a href="https://docs.google.com/document/d/1-V9FTlCjbbd6czDh6lgbu6IfzzWqoRE5PLmrt5q3CXQ/edit?tab=t.0">Read the doc</a></p>
             <p>This is a static index.html page rendering a React app. Inspect the code.</p>
             <p>Before you get to excited this isn't captnproto at all. This is a hacky AI slop version of the semantics of captnproto pipelined calls over websockets</p>
+            <pre>
+              const greeting = makeGreeting("Alice") // Hello, Alice!
+            </pre>
+            <pre>
+              emphasize(greeting) // Hello, Alice!!!
+            </pre>
             <p><a href="https://github.com/southpolesteve/jsrpc-browser">Here is all the code</a></p>
             <p>
               <button onClick={runNonPipelined}>Run Non-Pipelined</button>
